Cleanup findbugs warnings.